[package]
name = "gossip-glomers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Serde 
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0.0"

# Errors
anyhow = "1.0.0"

# Logging
log = "0.4.2"